# ChangeLog for x11-drivers/xf86-video-ark
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-drivers/xf86-video-ark/ChangeLog,v 1.36 2009/12/15 15:27:04 armin76 Exp $

  15 Dec 2009; Raúl Porcel <armin76@gentoo.org>
  xf86-video-ark-0.7.1.ebuild:
  ia64 stable wrt #282290

  10 Dec 2009; Christian Faulhammer <fauli@gentoo.org>
  xf86-video-ark-0.7.2.ebuild:
  x86 stable, bug 294958

  10 Dec 2009; Samuli Suominen <ssuominen@gentoo.org>
  xf86-video-ark-0.7.2.ebuild:
  amd64 stable wrt #294958

  05 Oct 2009; Christian Faulhammer <fauli@gentoo.org>
  xf86-video-ark-0.7.1.ebuild:
  x86 stable, bug 282290

*xf86-video-ark-0.7.2 (03 Oct 2009)

  03 Oct 2009; Tomáš Chvátal <scarabeus@gentoo.org>
  +xf86-video-ark-0.7.2.ebuild:
  Version bump.

  30 Sep 2009; Samuli Suominen <ssuominen@gentoo.org>
  xf86-video-ark-0.7.1.ebuild:
  amd64 stable wrt #282290

  22 Sep 2009; Rémi Cardona <remi@gentoo.org> -xf86-video-ark-0.6.0.ebuild:
  drop old ebuilds

  15 Apr 2009; Raúl Porcel <armin76@gentoo.org>
  xf86-video-ark-0.7.0.ebuild:
  ia64 stable wrt #251832

  05 Apr 2009; Markus Meier <maekke@gentoo.org> xf86-video-ark-0.7.0.ebuild:
  x86 stable, bug #251832

  05 Apr 2009; Olivier Crête <tester@gentoo.org>
  xf86-video-ark-0.7.0.ebuild:
  Stable on amd64, bug #251832

  13 Mar 2009; Raúl Porcel <armin76@gentoo.org>
  xf86-video-ark-0.6.0.ebuild, xf86-video-ark-0.7.0.ebuild,
  xf86-video-ark-0.7.1.ebuild:
  Drop ~sh, its not available there

*xf86-video-ark-0.7.1 (13 Jan 2009)

  13 Jan 2009; Donnie Berkholz <dberkholz@gentoo.org>;
  +xf86-video-ark-0.7.1.ebuild:
  Version bump.

*xf86-video-ark-0.7.0 (10 Jun 2008)

  10 Jun 2008; Donnie Berkholz <dberkholz@gentoo.org>;
  +xf86-video-ark-0.7.0.ebuild:
  Bump to latest. Should all be compatible with xorg-server-1.5.

  24 Feb 2008; Donnie Berkholz <dberkholz@gentoo.org>; ChangeLog:
  Update my email.

  24 Jan 2007; Donnie Berkholz <dberkholz@gentoo.org>;